Plugin Name: Membership 2
Author: Philipp Stracker, Fabio Jun, Rheinard Khorf

Change Log:
----------------------------------------------------------------------

1.0.1.2
----------------------------------------------------------------------
- Improved the details in the Pro-Rating Add-on with short instructions
- Fix a bug in Pro-Rating Add-on to correctly apply discount from now on
- Fix wrong signup-logic to instantly disable the old subscription on membership upgrade/downgrade
- Fix a PHP error that occured when paying the first invoice of a member via manual gateway
- Fix displayed payment method for subscriptions in Member editor screen
- Small changes like fix some typos, add new filters and code cleanup

1.0.1.1
----------------------------------------------------------------------
- Add a new Automated Email Response: User account created (i.e. welcome email)
- Add a warning when BuddyPress pages conflict with M2 Membership pages
- Add a warning when M2 is installed in an deprecated directory (can cause conflicts)
- Fix detection of valid subscriptions to fix issues with subscriptions getting expired too early
- Fix the BuddyPress registration form/workflow
- Fix the Profile Fields Add-on, now settings are actually saved
- Fix Invitation Code Add-on to not automatically change existing codes upon saving
- Fix bug that prevented deleting invoices
- Fix a bug that would temporarily grant access to a membership when user cancels payment
- Fix a bug that created duplicate email templates every time an email was sent
- Fix a bug in the reset-script that would delete too much data in multisite installs (see Help > Advanced Settings)
- Fix a wrong action hook used in registration form that would display wrong fields when certain plugins are activated
- Fix a PHP warning on Membership 2 pages about "invalid argument in foreach"

1.0.1.0
----------------------------------------------------------------------
- Add gateway: 2Checkout